--- a/content/noval/01.md
+++ b/content/noval/01.md
@@ -1,26 +1,30 @@
 +++
 date = '2026-01-20T12:26:58+08:00'
 draft = false
-title = '有因为的所以（一）'
+title = '瑟鲁之歌 | 有因为的所以（一）'
 +++
 
-江上的风像海浪一样，呼啸着，一阵一阵席卷而来，我伸出左手，紧紧按住帽子。脚下的船并不为风所动，它结实、体型庞大，风从船体荡开，分散，转而又汇集起来，一起冲向没有任何阻挡的开放空间。登上这条船的大部分是外卖员，他们把交通工具停在一层，趁着航行的时间抽着烟，倚在栏杆上休息一会儿。和我一样走上二层甲板的人很少。我数了数，一共四个。
+江上的风像海浪一样，呼啸着，一阵一阵席卷而来，我伸出手，紧紧按住帽子。脚下的船并不为风所动，它结实、体型庞大，风从船体荡开，分散，转而又汇集起来，一起冲向没有任何阻挡的开放空间。登上这条船的大部分是外卖员，他们把交通工具停在一层，趁着航行的时间抽支烟，休息一会儿。和我一样走上二层甲板的人很少。一、二、三，四个，加上我，一共四个。
 
-像很多电影里的浪漫情节一样，甲板上也有一对情侣。他们双双站在栏杆边，女子的双手轻轻搭在上面，男子伸出一只手，极其自然地环住女子的腰。
+这是一条摆渡船。像很多电影里的浪漫情节一样，甲板上也有一对情侣。他们站在船边，一高一低，如同黑色的剪影。
 
-夜。英文中的“night”。像被细致地涂上了清漆一般，此时的夜晚呈现出一种通透的质感。
+夜。英文中的“night”。像被细致地涂上清漆一般，呈现出一种通透的质感。
 
-黑夜之中的建筑群，真是太绚丽。
+在这样的夜色里，从十九世纪建成的建筑，到现在安藤忠雄设计的大楼，全都底气十足地散发着光芒。月光被划得细碎，不发一言地被呼啸而过的江风带走，隐退到黑暗中。
 
-绚丽。这个词用在这里，恰如其分。
+绚丽。
+
+真是太绚丽。
+
+黑夜之中的建筑群，像一场精心设计的舞会。“绚丽”这个词用在这里，恰如其分。
 
 正在视频通话的男子，举着手机，环绕着展示周围的景象。“你看，这就是上海。”
 
-“你们看，这就是东方明珠！”课堂上老师举起书本，指着上面的一张照片对我们说。“东方明珠”四个字她说得重重的，一下一下敲入我的记忆。白天的东方明珠和照片上一模一样。
+——“你们看，这就是东方明珠！”课堂上老师举起书本，指着上面的一张照片对我们说。“东方明珠”四个字她说得重重的，一下一下敲入我的记忆里。白天的东方明珠和照片上一模一样。
 
 一模一样是很难得的，书也好，电视剧也好，放到现实生活中，常常难以找到相同的部分。
 
-我低头看向脖子上的项链。在这样的黑夜，连它也闪烁着平时看不到的轻微光泽。
+我低头看向脖子上的项链。伸手触摸的时候，一股暖意从指腹传来。
 
 ——我已经二十三岁了，按理来说是个大人，可不知道为什么，总没有自己是个大人的实感。
 
@@ -30,7 +34,7 @@ title = '有因为的所以（一）'
 
 二十七岁我从北京离开，去了南方的一个城市。
 
-很早很早的时候，我以为自己将来会去很多地方，想象着广阔无垠的世界有多少意想不到的奇妙景象。事实上，除了家乡，居住时间可以以“年”为单位记录的只有北京。仅有的几个城市，我去旅游过的城市，完全算得上走⻢观花，匆匆瞥一眼，脑子里什么也没留下。所以，二十七岁的离开是第一次把“以为”和“事实”稍微拉近。
+很早很早的时候，我以为自己将来会去很多地方，想象着广阔无垠的世界有多少意想不到的奇妙景象。事实上，除了家乡，居住时间可以以“年”为单位记录的只有北京。仅有的几个城市，我去旅游过的城市，完全算得上走⻢观花，匆匆瞥一眼，什么也没留下。所以，二十七岁的离开是第一次把“以为”和“事实”稍微拉近。
 
 忘记从哪一天开始，我每天早上七点起床，晚上十一点睡觉，一连持续好几年。抵达深圳后，一切倏然停止。没有准时睡觉，没有准时起床。
 
@@ -42,6 +46,7 @@ title = '有因为的所以（一）'
 
 与方茴真正意义上的来往由一场电影开始，是她主动邀请我的。  
 
+****
 
 那是一个周六，太阳将落未落，卧在空中，很懒的样子。四周浮动着闷热的气息。离开灌满冷气的房间，身上的毛孔立即警觉起来，屏住呼吸。
 
@@ -61,12 +66,12 @@ title = '有因为的所以（一）'
 
 我不知道该就此说些什么，连同空气也变得局促不安。
 
-为什么非要说什么不可呢?为什么沉默会让人感觉到尴尬?疑问一出现，仿佛初次制作陶器的人偶然烧出耐人寻味的颜色，心绪不由自主沉入其中，沉默和尴尬之间杂乱的联结悄然松解，空气逐渐正常流动起来。
+为什么非要说什么不可呢?为什么沉默会让人感觉到尴尬？疑问一出现，仿佛初次制作陶器的人偶然烧出耐人寻味的颜色，心绪不由自主沉入其中，沉默和尴尬之间杂乱的联结悄然松解，空气逐渐正常流动起来。
 
-电影院离小区十多分钟的路程，可是我们好像走了远远不止十多分钟。在离电影开场还有将近三十分钟的时候，我们坐在等候区的沙发上。
+电影院离小区十多分钟的路程，可是我们走了好像远远不止十多分钟。在离电影开场还有将近三十分钟的时候，我们坐在等候区的皮质沙发上。
 
 爆米花的香味肆意蔓延，以自身为诱饵招徕过往的人，仿佛男女之间秘而不宣的调情，暗含甜蜜的许诺。然而爆米花本身是乏味的——除了表面沾上的糖带来的发腻的甜味，爆开的玉米本身没有任何味道，跟电器包装里的发泡膜没什么两样(或许这只是基于我个人偏好的感受也有可能)。
 
-检票员面无表情低头验票，时不时伸手指向旁边的柜台，提醒顾客3D眼镜需要单独购买。有的人无奈地从队伍中离开，走到一旁的柜台，有的不解地质问为什么不提供，检票员机械地说着对不起，并解释说这是出于卫生方面的考虑，而且公共的眼镜损耗很快，影响观影效果，有的人撇了撇嘴，从队伍中离开，有的搬出法律条文反驳，检票员的面部肌肉向内紧紧收缩，尔后稍微放松，嘴里照旧吐出“对不起”三个字，并表示这是规定，自己无能为力。
+检票员面无表情低头验票，时不时伸手指向旁边的柜台，提醒顾客3D眼镜需要单独购买。有的人无奈地从队伍中离开，走到一旁的柜台，有的人不解地质问为什么不提供，检票员机械地说着对不起，并解释说这是出于卫生方面的考虑，而且公共的眼镜损耗很快，影响观影效果。听到这种话，有的人撇了撇嘴，从队伍中离开，有的人搬出法律条文反驳，检票员的面部肌肉向内紧紧收缩，尔后稍微放松，嘴里照旧吐出“对不起”三个字，并表示这是规定，自己无能为力。
 
 我百无聊赖看着周围发生的事，无意之中捕捉到一个男子的眼神。没有恶意，但不好理解的眼神，频频落在我们这一侧。难道我们有什么奇怪的地方？还是我的错觉？我不解地回望。他像是感觉到自己的失礼，慌乱地把目光移向别处。
