--- a/content/noval/02.md
+++ b/content/noval/02.md
@@ -5,33 +5,33 @@ title = '瑟鲁之歌 | 有因为的所以（二）'
 +++
 后来我才知道，他是电影院里的工作人员。
 
-“你为什么一直看着我们？”我本来打算置之不理，在他即将给我们检票的时候，突然脱口而出。
+“你为什么一直看着我们？”我本打算置之不理，在他即将给我们检票的时候，突然脱口而出。
 
-“不好意思，我... ...”，他的脸上带着歉意，然后转向方茴，“你... ...是方茴吗？”
+他的脸立马尴尬起来，声音里带着歉意：“不好意思，我... ...”然后转向方茴，“你... ...是方茴吗？”
 
-听到问话，方茴也同样看向他，脸上没有任何熟识的意思，震惊的意思倒是很明显。
+听到问话，方茴同样看向他，脸上没有任何熟识的意思，震惊的意思倒是很明显。
 
 “你已经不记得我了吧？”他尴尬地笑笑。
 
-原本只有我们两三个人的检票口现在由一个一个的人组成一列小有规模的队伍，方茴退到一旁，眉头微微皱起，似乎在极力搜寻与他有关的记忆。
+原本只有两三个人的检票口现在逐渐汇聚成一列小有规模的队伍，方茴退到一旁，微微皱着眉头，似乎在极力搜寻与他有关的记忆。
 
 他正要开口，方茴突然抬起手，张大嘴巴：“想起来了！杨川！对不对？”
 
 “没错。”轻快的语调。
 
-“不好意思，好几年没⻅。你现在在这儿上班？”
+“不好意思。我们已经好多年没见过，我... ...你现在在这儿上班？”
 
 “是啊。原来那家饭店已经倒闭了。”他边检票边说。
 
-她仿佛因为自己的提问感到愧疚，声音黯淡了很多，“挺不容易的吧？”
+她仿佛因为自己的提问感到愧疚，声音也黯淡了许多，“挺不容易的吧？”
 
 男子笑了笑，“没有什么是固定不变的，而且我本来也不打算一直在那儿干下去。”
 
 他一边检票，一边给顾客解释播放厅的位置。
 
-“你们快进去吧。”说完，低头看了一眼方茴手上的电影票，“7号厅往里走倒数第二个就是。”
+“你们快进去吧。”说完，低头看一眼方茴手上的电影票，“7号厅往里走倒数第二个就是。”
 
-通向影厅的走道两侧挂着海报，印着新上映的电影。小小一段路仿佛庄严的仪式，让人忍不住停止开玩笑，自觉将懒洋洋的叹息吞回胸口。橘色灯光在这一小片空间交错、融合，落在墙上的被恰如其分地反射，墙将本身的颜色自觉收敛起来。走在其中，没有一点儿声音，连方茴的高跟鞋也是一样，厚􏰂的地毯将落在地上的声音一一吸纳。
+通向影厅的走道两侧挂着海报，印着新上映的电影。小小一段路仿佛庄严的仪式，让人忍不住停止开玩笑，将懒洋洋的叹息吞回。橘色灯光在这一小片空间交错、融合，落在墙上的部分被恰如其分地反射，墙自觉地将本身的颜色收敛起来。走在其中，没有一点儿声音，连方茴的高跟鞋也一样，厚重的地毯将落在地上的声音一一吸纳。
 
 我看了眼怀中的爆米花，忍不住想，爆米花香味这类富有技巧性的语言拥有异乎寻常的力量，能把已经掌握的事实冲淡，并且一点一点地减轻其重量。没有白纸黑字，不用负法律责任的许诺。送到嘴里，不出所料，照旧乏味。
 
@@ -41,7 +41,7 @@ title = '瑟鲁之歌 | 有因为的所以（二）'
 
 “你说整容真能整得一模一样吗？怎么样都会有痕迹吧？” 她在我开口之前先开启话题。
 
-“现实生活中我看到整过容的人都带有明显的痕迹。割双眼皮啦，垫鼻子啦，不一定 有疤痕，反正一看就知道整了。”
+“现实生活中我看到整过容的人都带有明显的痕迹。割双眼皮啦，垫鼻子啦，不一定有疤痕，反正一看就知道整了。”
 
 “不过也有可能有些整得太精巧所以我根本就没发现吧。”我后来想想，加上一句。
 
